api-management/httpbin-test/2-api.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin-route-apps11
  namespace: apps
  annotations:
    hub.traefik.io/api: httpbin-api
    hub.traefik.io/api-version: httpbin-default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`httpbin.traefik.localhost`) && PathPrefix(`/apps`)
      services:
        - name: httpbin-svc
          namespace: apps
          port: 8000
      middlewares:
        - name: strip-httpbin-prefix
          
---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin-route-apps3
  namespace: apps3
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`httpbin.traefik.localhost`) && PathPrefix(`/apps3`)
      services:
        - name: httpbin-svc
          namespace: apps
          port: 8000
      middlewares:
      - name: strip-httpbin-prefix
        namespace: apps

---

apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: httpbin-route-apps2
  namespace: apps2
  annotations:
    hub.traefik.io/api: httpbin-api@apps
    hub.traefik.io/api-version: httpbin-default@apps
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`httpbin.traefik.localhost`) && PathPrefix(`/apps2`)
      services:
        - name: httpbin-svc
          namespace: apps
          port: 8000
      middlewares:
      - name: strip-httpbin-prefix
        namespace: apps
